--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Pixel Art Maker!</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Londrina+Outline">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="designs.js"></script>
+  <script src="js/designs.js"></script>
 </head>
 <body>
   <h1>Pixel Art Maker</h1>
